--- a/server/views/partials/bottom_nav.ejs
+++ b/server/views/partials/bottom_nav.ejs
@@ -1,4 +1,4 @@
 <!-- Bottom Nav Bar -->
-<nav class="navbar fixed-bottom navbar-dark bg-dark">
+<nav class="navbar fixed-bottom navbar-dark bg-dark"> <!-- bottom bar partial on every webpage -->
   <h6 class="navbar-text">&copy; Copyright 2022. All Rights reserved.</h6>
 </nav>
