--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include partials/header.ejs %>
-<%- include partials/main_nav.ejs %>
-<!-- Main Content -->
+<%- include partials/main_nav.ejs %> <!-- partials for every webpage -->
+<!-- Home page -->
 <main>
   <div id="wrapper">
         <div id="left-column">
@@ -51,6 +51,4 @@ img {
 }
 </style>
 <%- include partials/bottom_nav.ejs %>
-<%- include partials/footer.ejs %>
-
-
+<%- include partials/footer.ejs %> <!-- partials for every webpage -->
